# Luo_ros2_control

./: .clang-format  .gitignore  .gitmodules  legged_estimator.tar.xz  local_jazzy_ws.env  readme.md  rosdep_keys.txt
src/legged_bringup/: CMakeLists.txt  package.xml
src/legged_bringup/launch/: control_loop.launch.py  gazebo.launch.py  gazebo.launch.xml  gazebo_bridge.yaml  gz.launch.py  legged_controller.yaml  test.launch.py  testcmd.txt
src/legged_bringup/resource/A1/config/: gait.info  task.info
src/legged_bringup/resource/A1/urdf/: A1.urdf  gazebo.xacro
src/legged_bringup/resource/A1/urdf/builder/: leg.xacro  robot.xacro
src/legged_bringup/resource/anymal_c/config/mpc/: task.info
src/legged_bringup/resource/anymal_c/urdf/: IMU_gz.xacro  anymal.urdf  gazebo.xacro
src/legged_bringup/rviz/: legged_robot.rviz
src/legged_controllers/: CMakeLists.txt  legged_controller_plugin.xml  legged_mrt_plugin.xml  legged_wbc_plugin.xml  package.xml  params.yaml
src/legged_controllers/include/legged_controllers/: IMUhandler.hpp  SafetyChecker.hpp  TargetTrajectoriesPublisher.hpp  legged_InterfaceProvider.hpp  legged_controller.hpp  legged_mrt.hpp  legged_safty.hpp  legged_target.hpp  legged_wbc.hpp
src/legged_controllers/include/legged_controllers/test_tools/: contactTester.hpp  motorTester.hpp
src/legged_controllers/src/: TargetTrajectoriesPublisher.cpp  legged_controller.cpp  legged_mrt.cpp  legged_sqp_mpc.cpp  legged_target.cpp  legged_wbc.cpp
src/legged_controllers/src/test_tools/: contactTester.cpp  motorTester.cpp
src/legged_description/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/legged_description/launch/: legged_robot_ddp.launch.py
src/legged_description/launch/launch/: gait_command.launch.py  legged_robot_ddp.launch.py  mpc_ddp.launch.py  robot_target.launch.py
src/legged_description/launch/launch_ros/: basic.launch.py  dummy.launch.py
src/legged_description/resource/anymal_c/urdf/: IMU.xacro  anymal.urdf  anymal_gz.urdf  gazebo.xacro  joint.xacro  joint_gz.xacro  tip_foce.xacro
src/legged_description/resource/custombot/urdf/: joint.xacro  real.xacro
src/legged_estimator/: CMakeLists.txt  legged_estimator_plugin.xml  package.xml
src/legged_estimator/include/legged_estimator/: FromTopiceEstimate.hpp  LinearKalmanFilter.hpp  StateEstimateBase.hpp  legged_estimator.hpp
src/legged_estimator/src/: FromTopicEstimate.cpp  LinearKalmanFilter.cpp  StateEstimateBase.cpp  legged_estimator.cpp
src/legged_hardware/: CMakeLists.txt  package.xml  sim_interface.xml  sim_params.md
src/legged_hardware/include/legged_hardware/: contact_sim.hpp  imu_sim.hpp  motor_sim.hpp
src/legged_hardware/include/legged_hardware/simHardware/: imu_sim.hpp
src/legged_hardware/src/: contact_sim.cpp  imu_sim.cpp  motor_sim.cpp
src/legged_hardware/src/simHardware/: contact_sim.cpp  imu_sim.cpp
src/legged_interface/: CMakeLists.txt  package.xml
src/legged_interface/include/legged_interface/: LeggedInterface.h  LeggedRobotPreComputation.h
src/legged_interface/src/: LeggedRobotPreComputation.cpp
src/legged_remote/: CMakeLists.txt  package.xml
src/legged_remote/front/: index.html  package-lock.json  package.json  tsconfig.json
src/legged_remote/front/js/: index.d.ts  index.d.ts.map  index.js  index.js.map
src/legged_remote/front/ts/: index.ts
src/legged_remote/include/legged_remote/: rosNode.hpp  webServer.hpp
src/legged_remote/src/: webServer.cpp
src/legged_sim/: CMakeLists.txt  legged.sdf  package.xml  tt.txt
src/legged_sim/A1/: model.sdf
src/legged_sim/anymal/: model.config  model.sdf
src/legged_sim/scene/: model.config  model.sdf
src/legged_sim/scene/meshes/: obstacle.glb
src/legged_tester/: package.xml  setup.cfg  setup.py
src/legged_tester/legged_tester/: jointTester.py
src/legged_wbc/: CMakeLists.txt  package.xml
src/legged_wbc/include/legged_wbc/: HierarchicalWbc.h  HoQp.h  Task.h  WbcBase.h  WeightedWbc.h
src/legged_wbc/src/: HierarchicalWbc.cpp  HoQp.cpp  WbcBase.cpp  WeightedWbc.cpp
src/ocs2_legged_robot/: CMakeLists.txt  package.xml
src/ocs2_legged_robot/config/command/: gait.info
src/ocs2_legged_robot/config/mpc/: task.info
src/ocs2_legged_robot/include/ocs2_legged_robot/wbc/: HierarchicalWbc.h  HoQp.h  WbcBase.h  WeightedWbc.h
src/ocs2_legged_robot/src/wbc/: HierarchicalWbc.cpp  HoQp.cpp  WbcBase.cpp  WeightedWbc.cpp
src/ocs2_legged_robot_ros/launch/: legged_robot_ddp.launch.py  legged_robot_sqp.launch.py
src/ocs2_legged_robot_ros/src/: LeggedRobotDummyNode.cpp
src/ocs2_perceptive/ocs2_anymal_loopshaping_mpc/config/rviz/: demo_config.rviz
src/ocs2_perceptive/ocs2_anymal_loopshaping_mpc/launch/: mpc.launch.py  perceptive_mpc_demo.launch.py
src/ocs2_perceptive/ocs2_anymal_loopshaping_mpc/src/: PerceptiveMpcDemo.cpp
src/ocs2_perceptive/ocs2_quadruped_interface/: CMakeLists.txt
src/ocs2_perceptive/segmented_planes_terrain_model/: CMakeLists.txt
src/ocs2_perceptive_anymal/ocs2_anymal_commands/: CMakeLists.txt
src/ocs2_perceptive_anymal/ocs2_anymal_loopshaping_mpc/: CMakeLists.txt
src/ocs2_perceptive_anymal/ocs2_anymal_loopshaping_mpc/launch/: perceptive_mpc_demo.launch.py
src/ocs2_perceptive_anymal/ocs2_anymal_models/: CMakeLists.txt
src/ocs2_perceptive_anymal/ocs2_quadruped_loopshaping_interface/: CMakeLists.txt
src/qpOASES_colcon/: CMakeLists.txt  package.xml
src/qpoases_colcon/: package.xml
src/simulation/: world.sdf
src/simulation/A1/: model.config  model.sdf
src/simulation/anymal/: anymal.urdf  model.config  model.sdf
src/simulation/gazebo_sim/Obstacle/: launch.sdf  model.config  model.sdf  obstacle.dae
src/simulation/scene/: model.sdf
