<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>legged_description</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="Louie.LiuHaoYu@outlook.com">luo</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>ocs2_legged_robot_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
